--- a/certificates.html
+++ b/certificates.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Credentials Archive | Rushan Ul Haque</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml"
+        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚀</text></svg>">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mobile.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
@@ -192,6 +194,50 @@
             border-color: var(--accent-color);
             transform: translateX(-5px);
         }
+
+        /* Mobile Adjustments for Certificates */
+        @media screen and (max-width: 768px) {
+            .cert-page {
+                padding: 4vh 5%;
+            }
+
+            .cert-hero h1 {
+                font-size: 2.2rem;
+            }
+
+            .cert-grid {
+                grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+                /* Smaller tiles */
+                gap: 1rem;
+            }
+
+            .cert-card {
+                padding: 1.2rem;
+                border-radius: 12px;
+            }
+
+            .cert-icon {
+                width: 40px;
+                height: 40px;
+                font-size: 1.2rem;
+                margin-bottom: 1rem;
+            }
+
+            .cert-card h3 {
+                font-size: 0.85rem;
+                line-height: 1.3;
+            }
+
+            #sukuna-cursor {
+                display: none !important;
+            }
+
+            .back-btn {
+                padding: 0.8rem 1.5rem;
+                font-size: 0.9rem;
+                margin-bottom: 2rem;
+            }
+        }
     </style>
 </head>
 
@@ -225,6 +271,11 @@
     </script>
 
     <div class="cert-page">
+        <a href="index.html" class="back-btn">
+            <i class="ph ph-arrow-left"></i>
+            <span>Go Back</span>
+        </a>
+
         <div class="cert-hero">
             <h1>Credentials Archive</h1>
             <p>Professional certifications, achievements, and recognitions</p>
