--- a/index.html
+++ b/index.html
@@ -758,81 +758,86 @@
                 <h2 data-i18n="nav-projects">CREATIVE LAB</h2>
             </div>
 
-            <div class="m-projects-slider">
-                <!-- Project 1: ShadowChat -->
-                <div class="m-project-card glass-panel reveal">
-                    <div class="m-project-badge">ENCRYPTED • CHAT</div>
-                    <h3 data-i18n="proj-1-name">ShadowChat</h3>
-                    <p data-i18n="proj-1-desc">Encrypted burn-after-read private chatroom</p>
-                    <div class="m-project-links">
-                        <a href="https://github.com/rushanhaque/SHADOW_CHAT.git" target="_blank"><i
-                                class="ph ph-github-logo"></i></a>
-                        <a href="https://shadow-chat-7ifp.onrender.com" target="_blank"><i
-                                class="ph ph-arrow-square-out"></i></a>
-                    </div>
-                </div>
+            <div class="m-projects-slider-container" style="position: relative;">
+                <button class="m-scroll-btn m-left" id="m-proj-left"><i class="ph ph-caret-left"></i></button>
+                <button class="m-scroll-btn m-right" id="m-proj-right"><i class="ph ph-caret-right"></i></button>
 
-                <!-- Project 2: GitHub Auto-Push -->
-                <div class="m-project-card glass-panel reveal">
-                    <div class="m-project-badge">UTILITY • AUTOMATION</div>
-                    <h3 data-i18n="proj-2-name">GitHub Auto-Push</h3>
-                    <p data-i18n="proj-2-desc">Automated Git repo-upload tool</p>
-                    <div class="m-project-links">
-                        <a href="https://github.com/rushanhaque/Auto-Repo-push.git" target="_blank"><i
-                                class="ph ph-github-logo"></i></a>
-                        <a href="https://rushanhaque.itch.io/autorepopusher" target="_blank"><i
-                                class="ph ph-download"></i></a>
+                <div class="m-projects-slider">
+                    <!-- Project 1: ShadowChat -->
+                    <div class="m-project-card glass-panel reveal">
+                        <div class="m-project-badge">ENCRYPTED • CHAT</div>
+                        <h3 data-i18n="proj-1-name">ShadowChat</h3>
+                        <p data-i18n="proj-1-desc">Encrypted burn-after-read private chatroom</p>
+                        <div class="m-project-links">
+                            <a href="https://github.com/rushanhaque/SHADOW_CHAT.git" target="_blank"><i
+                                    class="ph ph-github-logo"></i></a>
+                            <a href="https://shadow-chat-7ifp.onrender.com" target="_blank"><i
+                                    class="ph ph-arrow-square-out"></i></a>
+                        </div>
                     </div>
-                </div>
 
-                <!-- Project 3: ShadowKill -->
-                <div class="m-project-card glass-panel reveal">
-                    <div class="m-project-badge">SECURITY • PYTHON</div>
-                    <h3 data-i18n="proj-3-name">ShadowKill</h3>
-                    <p data-i18n="proj-3-desc">Audio triggered panic task-kill system</p>
-                    <div class="m-project-links">
-                        <a href="https://github.com/rushanhaque/killswitch/releases/tag/trial" target="_blank"
-                            title="pip install shadowkill_ruh">
-                            <i class="ph ph-github-logo"></i>
-                        </a>
-                        <a href="https://github.com/rushanhaque/killswitch/releases/tag/trial" target="_blank"
-                            title="pip install shadowkill_ruh">
-                            <i class="ph ph-terminal-window"></i>
-                        </a>
+                    <!-- Project 2: GitHub Auto-Push -->
+                    <div class="m-project-card glass-panel reveal">
+                        <div class="m-project-badge">UTILITY • AUTOMATION</div>
+                        <h3 data-i18n="proj-2-name">GitHub Auto-Push</h3>
+                        <p data-i18n="proj-2-desc">Automated Git repo-upload tool</p>
+                        <div class="m-project-links">
+                            <a href="https://github.com/rushanhaque/Auto-Repo-push.git" target="_blank"><i
+                                    class="ph ph-github-logo"></i></a>
+                            <a href="https://rushanhaque.itch.io/autorepopusher" target="_blank"><i
+                                    class="ph ph-download"></i></a>
+                        </div>
                     </div>
-                </div>
 
-                <!-- Project 4: Sentry Mode -->
-                <div class="m-project-card glass-panel reveal">
-                    <div class="m-project-badge">IOT • ARDUINO</div>
-                    <h3 data-i18n="proj-4-name">Sentry Mode</h3>
-                    <p data-i18n="proj-4-desc">Anti-interference detection system with alarm</p>
-                    <div class="m-project-links">
-                        <a href="https://github.com/rushanhaque/sentry-mode.git" target="_blank"><i
-                                class="ph ph-github-logo"></i></a>
-                        <a href="https://www.mediafire.com/file/wmefmmjfk2grwox/sentry_mode.py/file" target="_blank"><i
-                                class="ph ph-download"></i></a>
+                    <!-- Project 3: ShadowKill -->
+                    <div class="m-project-card glass-panel reveal">
+                        <div class="m-project-badge">SECURITY • PYTHON</div>
+                        <h3 data-i18n="proj-3-name">ShadowKill</h3>
+                        <p data-i18n="proj-3-desc">Audio triggered panic task-kill system</p>
+                        <div class="m-project-links">
+                            <a href="https://github.com/rushanhaque/killswitch/releases/tag/trial" target="_blank"
+                                title="pip install shadowkill_ruh">
+                                <i class="ph ph-github-logo"></i>
+                            </a>
+                            <a href="https://github.com/rushanhaque/killswitch/releases/tag/trial" target="_blank"
+                                title="pip install shadowkill_ruh">
+                                <i class="ph ph-terminal-window"></i>
+                            </a>
+                        </div>
                     </div>
-                </div>
 
-                <!-- Project 5: CodeSense AI -->
-                <div class="m-project-card glass-panel reveal">
-                    <div class="m-project-badge">AI • ANALYSIS</div>
-                    <h3 data-i18n="proj-5-name">CodeSense AI</h3>
-                    <p data-i18n="proj-5-desc">AI-powered code snippet explainer</p>
-                    <div class="m-project-links">
-                        <a href="https://github.com/rushanhaque/CodeSense-AI.git" target="_blank"><i
-                                class="ph ph-github-logo"></i></a>
-                        <a href="https://code-sense-ai-omega.vercel.app/" target="_blank"><i
-                                class="ph ph-arrow-square-out"></i></a>
+                    <!-- Project 4: Sentry Mode -->
+                    <div class="m-project-card glass-panel reveal">
+                        <div class="m-project-badge">IOT • ARDUINO</div>
+                        <h3 data-i18n="proj-4-name">Sentry Mode</h3>
+                        <p data-i18n="proj-4-desc">Anti-interference detection system with alarm</p>
+                        <div class="m-project-links">
+                            <a href="https://github.com/rushanhaque/sentry-mode.git" target="_blank"><i
+                                    class="ph ph-github-logo"></i></a>
+                            <a href="https://www.mediafire.com/file/wmefmmjfk2grwox/sentry_mode.py/file"
+                                target="_blank"><i class="ph ph-download"></i></a>
+                        </div>
                     </div>
-                </div>
 
-                <!-- Project 6: More -->
-                <div class="m-project-card glass-panel m-coming-soon reveal">
-                    <div class="m-coming-icon"><i class="ph ph-hourglass-medium"></i></div>
-                    <h3 data-i18n="proj-more-title">More Computing...</h3>
-                    <p data-i18n="proj-more-desc">New projects in development.</p>
+                    <!-- Project 5: CodeSense AI -->
+                    <div class="m-project-card glass-panel reveal">
+                        <div class="m-project-badge">AI • ANALYSIS</div>
+                        <h3 data-i18n="proj-5-name">CodeSense AI</h3>
+                        <p data-i18n="proj-5-desc">AI-powered code snippet explainer</p>
+                        <div class="m-project-links">
+                            <a href="https://github.com/rushanhaque/CodeSense-AI.git" target="_blank"><i
+                                    class="ph ph-github-logo"></i></a>
+                            <a href="https://code-sense-ai-omega.vercel.app/" target="_blank"><i
+                                    class="ph ph-arrow-square-out"></i></a>
+                        </div>
+                    </div>
+
+                    <!-- Project 6: More -->
+                    <div class="m-project-card glass-panel m-coming-soon reveal">
+                        <div class="m-coming-icon"><i class="ph ph-hourglass-medium"></i></div>
+                        <h3 data-i18n="proj-more-title">More Computing...</h3>
+                        <p data-i18n="proj-more-desc">New projects in development.</p>
+                    </div>
                 </div>
             </div>
         </section>
