Refactor mobile view with dynamic theming, restore neural grid, and polish desktop navigation

--- a/certificates.html
+++ b/certificates.html
@@ -271,7 +271,7 @@
     </script>
 
     <div class="cert-page">
-        <a href="index.html" class="back-btn">
+        <a href="#" onclick="history.back(); return false;" class="back-btn">
             <i class="ph ph-arrow-left"></i>
             <span>Go Back</span>
         </a>
